--- a/papers/references.bib
+++ b/papers/references.bib
@@ -4394,14 +4394,23 @@ year = {2008}
     keywords = {Density-functional theory, Electronic structure, Maximally-localised Wannier function}
 }
 
-@article{Thonhauser2011TheorySolids,
-    title = {{Theory of Orbital Magnetization in Solids}},
-    year = {2011},
-    author = {Thonhauser, T},
-    isbn = {0217979211058},
-    url = {http://dx.doi.org/10.1142/S0217979211058912},
-    issn = {0217-9792},
-    keywords = {berry phase, bloch functions, chern invariant, density functional theory, electron, extended systems, finite, first-principles, magnetism, magnetization, nuclear magnetic resonance, orbital magnetic moment and, paramagnetic resonance, periodic and, pseudopotentials, semi-classical, solids, temperature, wannier functions}
+@article{Thonhauser2011,
+abstract = {In this review article, we survey the relatively new theory of orbital magnetization in solids — often referred to as the "modern theory of orbital magnetization" — and its applications. Surprisingly, while the calculation of the orbital magnetization in finite systems such as atoms and molecules is straight forward, in extended systems or solids it has long eluded calculations owing to the fact that the position operator is ill-defined in such a context. Approaches that overcome this problem were first developed in 2005 and in the first part of this review we present the main ideas reaching from a Wannier function approach to semi-classical and finite-temperature formalisms. In the second part, we describe practical aspects of calculating the orbital magnetization, such as taking k-space derivatives, a formalism for pseudopotentials, a single k-point derivation, a Wannier interpolation scheme, and DFT specific aspects. We then show results of recent calculations on Fe, Co, and Ni. In the last part of this review, we focus on direct applications of the orbital magnetization. In particular, we will review how properties such as the nuclear magnetic resonance shielding tensor and the electron paramagnetic resonance g-tensor can be elegantly calculated in terms of a derivative of the orbital magnetization.},
+author = {Thonhauser, T.},
+doi = {10.1142/S0217979211058912},
+file = {:home/ponet/.local/share/data/Mendeley Ltd./Mendeley Desktop/Downloaded/Thonhauser - 2011 - Theory of orbital magnetization in solids.pdf:pdf},
+isbn = {0217979211058},
+issn = {0217-9792},
+journal = {International Journal of Modern Physics B},
+keywords = {berry phase,bloch functions,chern invariant,density functional theory,electron,extended systems,finite,first-principles,magnetism,magnetization,nuclear magnetic resonance,orbital magnetic moment and,paramagnetic resonance,periodic and,pseudopotentials,semi-classical,solids,temperature,wannier functions},
+mendeley-groups = {General Physics/Magnitization},
+month = {apr},
+number = {11},
+pages = {1429--1458},
+title = {{THEORY OF ORBITAL MAGNETIZATION IN SOLIDS}},
+url = {http://dx.doi.org/10.1142/S0217979211058912},
+volume = {25},
+year = {2011}
 }
 
 @article{Fukuda1995NovelSystems,
@@ -4713,7 +4722,7 @@ year = {2015}
     issn = {0022-3727}
 }
 
-@article{Tsymbal2001PerspectivesMagnetoresistance,
+@article{Tsymbal2001,
     title = {{Perspectives of giant magnetoresistance}},
     year = {2001},
     journal = {Solid State Physics - Advances in Research and Applications},
@@ -6564,5 +6573,51 @@ pages = {4442--4455},
 title = {{Electric polarization as a bulk quantity and its relation to surface charge}},
 volume = {48},
 year = {1993}
+}
+
+
+@article{Baibich1988,
+abstract = {We have studied the magnetoresistance of (001)Fe/(001)Cr superlattices prepared by molecularbeam epitaxy. A huge magnetoresistance is found in superlattices with thin Cr layers: For example, with tCr=9, at T=4.2 K, the resistivity is lowered by almost a factor of 2 in a magnetic field of 2 T. We ascribe this giant magnetoresistance to spin-dependent transmission of the conduction electrons between Fe layers through Cr layers. {\textcopyright} 1988 The American Physical Society.},
+author = {Baibich, M. N. and Broto, J. M. and Fert, A. and {Van Dau}, F. Nguyen and Petroff, F. and Eitenne, P. and Creuzet, G. and Friederich, A. and Chazelas, J.},
+url = {http://dx.doi.org/10.1103/PhysRevLett.61.2472},
+file = {:home/ponet/Downloads/PhysRevLett.61.2472.pdf:pdf},
+issn = {00319007},
+journal = {Physical Review Letters},
+number = {21},
+pages = {2472--2475},
+pmid = {10039127},
+title = {{Giant magnetoresistance of (001)Fe/(001)Cr magnetic superlattices}},
+volume = {61},
+year = {1988}
+}
+
+@article{Chappert2007,
+abstract = {Electrons have a charge and a spin, but until recently these were considered separately. In classical electronics, charges are moved by electric fields to transmit information and are stored in a capacitor to save it. In magnetic recording, magnetic fields have been used to read or write the information stored on the magnetization, which 'measures' the local orientation of spins in ferromagnets. The picture started to change in 1988, when the discovery of giant magnetoresistance opened the way to efficient control of charge transport through magnetization. The recent expansion of hard-disk recording owes much to this development. We are starting to see a new paradigm where magnetization dynamics and charge currents act on each other in nanostructured artificial materials. Ultimately, 'spin currents' could even replace charge currents for the transfer and treatment of information, allowing faster, low-energy operations: spin electronics is on its way. {\textcopyright} 2007 Nature Publishing Group.},
+author = {Chappert, Claude and Fert, Albert and {Van Dau}, Fr{\'{e}}d{\'{e}}ric Nguyen},
+url = {http://dx.doi.org/10.1038/nmat2024},
+file = {:home/ponet/Downloads/nmat2024.pdf:pdf},
+issn = {14764660},
+journal = {Nature Materials},
+number = {11},
+pages = {813--823},
+pmid = {17972936},
+title = {{The emergence of spin electronics in data storage}},
+volume = {6},
+year = {2007}
+}
+
+@article{Binasch1989,
+abstract = {The electrical resistivity of Fe-Cr-Fe layers with antiferromagnetic interlayer exchange increases when the magnetizations of the Fe layers are aligned antiparallel. The effect is much stronger than the usual anisotropic magnetoresistance and further increases in structures with more than two Fe layers. It can be explained in terms of spin-flip scattering of conduction electrons caused by the antiparallel alignment of the magnetization. {\textcopyright} 1989 The American Physical Society.},
+author = {Binasch, G. and Gr{\"{u}}nberg, P. and Saurenbach, F. and Zinn, W.},
+url = {http://dx.doi.org/10.1103/PhysRevB.39.4828},
+file = {:home/ponet/Downloads/PhysRevB.39.4828.pdf:pdf},
+issn = {01631829},
+journal = {Physical Review B},
+number = {7},
+pages = {4828--4830},
+pmid = {9948867},
+title = {{Enhanced magnetoresistance in layered magnetic structures with antiferromagnetic interlayer exchange}},
+volume = {39},
+year = {1989}
 }
 
