--- a/papers/Softening/Softening.tex
+++ b/papers/Softening/Softening.tex
@@ -3,54 +3,58 @@
 
 \section{Introduction}
 We have so far studied the behavior of ordered materials under the assumption of perfect homogeneity.
-This forms the base for understanding the more complex, inhomogeneous, scenarios that appear in reality.
-The origin of the inhomogeneity lies in the spontaneous symmetry breaking that occurs at the phase transition.
-The phase transitions that we discuss in this Thesis are all the result of a change in the temperature of the material. 
-An order parameter (OP) can be associated with the symmetry breaking, being zero before the phase transition, and acquiring a nonzero value afterwards.
-Since the energy potential obeys the symmetries of the parent phase, multiple degenerate energy minima appear, each with a different orientation of the OP. \lp{make a fig with landau potential}
-The different orientations of the OP are thus completely equivalent from the energetic point of view, and can be transformed by the symmetry operations of the parent phase.
-For example, we saw previously that in GdMn$_2$O$_5$ there are two primary OPs, $\bm{L}_1$ and $\bm{L}_2$, describing the antiferromagnetic orders of the two Mn chains.
-It was shown there that four symmetry related combinations of these OPs lead to the same energy.
-In Chromium a similar antiferromagnetic OP has two energy equivalent values.
-During a phase transition in a large system, regions that are separated in space will each individually acquire one of these values for the OP.
-Such regions are referred to as domains, with the narrow boundaries between them called domain walls (DWs), inside of which the OP is interpolated.
+This forms the base for understanding the more complex, inhomogeneous, scenarios that appear in reality because of the spontaneous symmetry breaking that occurs at the phase transition temperature $T_c$.
+
+We can associate an order parameter (OP) that describes the order that develops as a result of this symmetry breaking. It is thus zero above $T_c$ and nonzero below.
+The energy potential for the OP obeys the same symmetries as the parent structure, and will thus have as many degenerate minima as the dimensionality of the transformation operator that describes the broken symmetry.
+Each of these minima are associated with a different direction of the OP, and can be transformed into eachother by applying the symmetry operator. 
+The symmetry related orientations of the OP are thus completely equivalent from an energetic point of view.
+
+For example, we saw previously that in GdMn$_2$O$_5$ there are two primary OPs, $\bm{L}_1$ and $\bm{L}_2$, describing the antiferromagnetic order inside each Mn chain.
+It was shown that there are four combinations of these that have the same energy. They can be transformed into eachother by the time-reversal and inversion symmetry operators. 
+In Chromium a similar antiferromagnetic OP has two energy equivalent values, again related by time-reversal symmetry.
+
+During a phase transition in a large system, regions that are separated in space will each individually acquire one of these equivalent values for the OP.
+Such regions are referred to as domains, with the narrow boundaries between them called domain walls (DWs) inside of which the OP is interpolated.
 
 There are some ways to achieve a completely homogeneous situation. One example is through poling, where an external field is applied during the phase transtion to coax the system towards one of the orientations of the OP.
 Another is through expelling the DWs in the sample by keeping it close to the phase transition.
-This happens because the DWs are energetically more costly than a uniform domain, since the OP is locally forced to not be at the minimum of the energy potential.
-Consequently, by keeping the system close to the phase transition for an extended period, it is sometimes possible to expel the DWs from the material. 
-In the case of ferromagnetic or ferroelectric materials, this is usually limited by the depolarizing fields that develop at the domain surface (see Fig.~\ref{fig:BTO_depolarizing_schematic}).
+This happens because at the DWs the OP is forced away from the minimum, making them energetically less favorable than a uniform domain.
+Consequently, by keeping the system close to the phase transition for an extended period, it is sometimes possible to expel the DWs from the material.
+
+In the case of ferromagnetic or ferroelectric materials, this is process is usually limited by the depolarizing fields that develop at the domain surface (see Fig.~\ref{fig:BTO_depolarizing_schematic}).
 These favor an antiparallel orientation of the OP in neighboring domains, making it energetically impossible to have a single uniform domain when the sample size increases.
 \begin{figure}[h]
 	\IncludeGraphics{depolarizing_schematic}
 	\caption{\label{fig:BTO_depolarizing_schematic}{\bf Depolarizing fields.} a) A single domain. b) At a domain wall between two domains with opposite polarization. In both panels the dipoles are shown by the ovals leading to the polarization denoted by the yellow arrows. The associated depolarizing electric fields are shown by the red arrows. The orienation of these fields is such that for the single domain in panel (a) the depolarizing energy is large compared with that of the two domains in panel (b).}    
 \end{figure}
+
 It is thus clear that DWs will be present more often than not, with their density influenced by factors such as poling, cooling rate, and sample quality \cite{Griffin2012,Shen2018,Nataf2020}.
 We focus here on the DWs that are present in ferroelectric materials.
-
+\\\\
 % Together with the inherent difference between DWs and domains, this has indeed led to a great deal of research interest, both from the fundamental and technological point of view.
-It is interesting that even though DWs occupy only a fraction of the entire volume of the sample, they can often lead to the biggest contributions to macroscopic effects \cite{Schranz2012}. 
-Indeed, most of the research into DWs was originally focused on understanding their dynamics, since switching in ferroelectric materials is mainly a result of DW movement \cite{Merz1954,Gao2013}.
-The reason for this can be understood from the following energetic argument.
+Another interesting observation is that, even though DWs occupy only a fraction of the entire volume, they can lead to the biggest contributions to macroscopic effects \cite{Schranz2012}. 
+Indeed, most of the research into DWs was originally focused on their dynamics, since switching in ferroelectric materials is mainly a result of DW movement \cite{Merz1954,Gao2013}.
+This can be understood from the following energetic argument.
 When an external electric field is applied to the sample, it turns out that it is more favorable for the DWs to move in order to grow the favored domains\footnote{Domains with the polarization along the electric field.}, rather than uniformly rotating the polarization in the domain as a whole.
 The latter requires overcoming the prohibitively large energy barrier that separates different orientations of the polarization \cite{Tagantsev2010}.
-This relatively low energy cost associated with the DW movement will also turn out to be one of the main contributors to the softening effect which is the main subject of this Chapter.
-
+This relatively low energy cost associated with the DW movement will also turn out to be one of the main contributors to the main subject of this Chapter: the mechanical softening at purely ferroelectric DWs.
+\\\\
 Because of the scaling down of technological devices into the nanoscale realm, the focus has more and more shifted towards the DWs themselves as the subject of study, rather than just as being the boundaries between domains.
-The physics that govern the region of the DW is usually richer than that of the domains. One of the reasons is that the OP is locally forced away from the energetic minimum.
+The physics that govern the region of the DW is usually richer than that of the domains. One of the reasons is that, as we mentioned before, the OP is locally forced away from the energetic minimum.
 In the case of a double well potential (or so-called mexican hat potential), associated with many second order phase transitions, the OP at the center of the wall is at the top of the barrier.
 The curvature of the energy potential is inverted at this top, which has been argued to make perturbing the OP easier at the DW \cite{Scott2012}.
-The bandstructure is also different in the wall compared with the domains, due to the local structural differences.
+The electronic bandstructure is also different in the wall compared with the domains, due to the local structural differences.
 This can lead to enhanced conductivity, photovoltages, and current rectification \cite{Korbel2020,Huyan2019}.
 
 In the extreme case, certain DWs can even become conductive, opening the door to very promising technological applications \cite{Seidel2009}.
 One example is in information storage devices, where the small size of the DWs is beneficial for the information density.
-It was shown by Seidel et al. that by applying electric fields between opposing electrodes, the conducting DWs can be created or destroyed at will. This is used to write the ``data'', changing  the conductivity of the device in well-defined increments.
+It was shown by Seidel et al. that by applying electric fields between opposing electrodes, the conducting DWs can be created or destroyed at will. This is used to write the ``data'' by changing the conductivity of the device in well-defined increments.
 Probing the conductivity is then equivalent to reading the ``data''. 
-
+\\\\
 While this kind of technological promise has driven much of the research of DWs towards their electronic properties, interest for their mechanical characteristics has increased in more recent years.
 This field is much less developed and has many outstanding questions.
-
+\\\\
 Before continuing, it is useful to first define the elastic strain tensor $\varepsilon_{ij}$ as the symmetrized gradient of the deformation $u$:
 \begin{equation}
 \varepsilon_{ij} = \frac{1}{2}(\partial_i u_j + \partial_j u_i),
@@ -60,18 +64,20 @@ The vector $\bm{u}(\bm{r})$ relates points $\bm{r}$ in the reference structure t
 The strain arises in ferroelectric materials as a secondary OP due to the electrostrictive coupling to the polarization $P$.
 Its contribution to the free energy density can be written as:
 \begin{equation}
-	f_{q}=-q_{ijkl}\varepsilon_{ij}P_{k}P_{l},\label{eq:qpp}
+	f_{q}=-q_{ijkl}\varepsilon_{ij}P_{k}P_{l},\label{eq:qpp},
 \end{equation}
-where $q_{ijkl}$ denotes the strength of the coupling, the indices $i, j, k, l$ again iterate through $x, y, z$ and Einstein summation over repeated indices is performed.
+where $q_{ijkl}$ denotes the strength of the coupling, the indices $i, j, k, l$ again iterate through $x, y, z$, and Einstein summation over repeated indices is implied.
 The longitudinal part, $q_{iiii} \varepsilon_{ii} (P_i)^2$, leads to the largest contribution to the strain, causing the material to stretch along $P_i$.
+
 Due to the high degree of symmetry in crystals, many equivalent orientations of $P$ are possible, each with an associated strain. The DWs separating these are equally numerous, and have a distinct strain texture due to the variation of $P$ accross the DW.
+
 For example, a 180$^\circ$ degree DW separates domains with completely anti-parallel $P$ vectors.
-Due to the square dependence on $P$ of the energy in Eq.~\eqref{eq:qpp}, $\varepsilon$ will be identical in both domains. Still, the different value of $P$ inside the wall versus in the domains will cause a local variation of $\varepsilon$. More precisely, the strain is diminished at the wall due to $P=0$, leading to an indentation at the surface of the sample.
+Due to the square dependence on $P$ of the energy in Eq.~\eqref{eq:qpp}, $\varepsilon$ will be identical in both domains. Still, the different values of $P$ inside the wall versus in the domains will cause a local variation of $\varepsilon$. More precisely, the strain is diminished at the wall since $P=0$, leading to an indentation at the surface of the material.
 As we will thoroughly discuss below, this local variation lies at the heart of the mechanical softening of the 180$^\circ$ DW.
 
 Other types of DW such as 90$^\circ$ DWs instead separate domains with different strain textures, which are referred to as twin-domains, and are separated by twin or ferroelastic DWs.
 See Refs.~\cite{Cao1991,Hu1998,Marton2010} for a more in-depth study of the possible domains and domain walls in ferroelectrics.
-
+\\\\
 The mechanical properties of ferroelectric DWs are not only of fundamental, but also of technological interest.
 It has been shown that ferroelectric-ferroelastic DWs can be moved by applying stress \cite{Schneider2001}.
 This may not be so surprising, since the different strain textures of the domains interact differently with the mechanical perturbation, causing a force imbalance on the DW and an associated movement.
@@ -84,13 +90,14 @@ where $\Gamma_{ijkl}$ is the flexoelectric tensor.
 An applied strain gradient $\partial_j\varepsilon_{kl}$ will thus appear as an effective internal electric field $E_{i} = -\frac{\partial f}{\partial P_i} = \Gamma_{ijkl}\partial_j\varepsilon_{kl}$, coupling directly to $P_i$.
 While this effect is generally small (i.e. the $\Gamma_{ijkl}$ are small), the size of strain gradients scales inversely with the size of the sample, meaning that it becomes increasingly more important at the nanoscale of current state of the art electronic devices.
 Thus, using a tip in contact with the material to apply such a strain gradient allows one to mechanically write domain patterns and DWs at will \cite{Lu2012,Abdollahi2015, Cordero-Edwards2017,Cordero-Edwards2019}.
-
-In this Chapter we discuss the mechanical softening of 180$^\circ$, purely ferroelectric DWs.
+\\\\
+In this Chapter we discuss the mechanical softening of 180$^\circ$, purely ferroelectric DWs. They are non-ferroelastic in the sense that they separate domains that have identical strain textures.
 A similar softening has been previously observed and studied for ferroelastic DWs \cite{Lee2003,Scott2012}, but purely ferroelectric DWs have largely flown under the radar of such mechanical studies.
 One reason is that the width of 180$^\circ$ DWs is on the order of a couple of unit cells (5 - 20 \AA \cite{Zhirnov1959}), and since they don't separate domains with different strains, they were perceived too small to be detected with mechanical means.
 This is because these studies usually involve the application of a tip to the surface of the sample, and the contact area of such a tip is at least 100 unit cells.
 As mentioned before, however, even 180$^\circ$ DWs have a distinct strain texture associated to them, which extends much further than the narrow region in which the polarization reverses.
-This texture can be picked up mechanically by the applied tip and ultimately allows one to make the observations that are the subject of this Chapter, and will be discussed in the next section.
+This texture can be picked up mechanically by the applied tip and ultimately allows one to make the observations that will be discussed in the next section, and are at the base of the research presented in this Chapter.
+
 Afterwards, we continue with a small overview of the crystalline properties of BaTiO$_3$, an archetypical example of a ferroelectric perovskite.
 This is followed by a detailed theoretical study and numerical simulation of the experimental observations, and finally a conclusion summarizing the results.
 
